# ai-mcp

./: .gitignore  README.md
mcp-bi-metadata/: README.md  pyproject.toml
mcp-bi-metadata/mcp_bi_metadata/: __init__.py  main.py  mcp_server.py
mcp-bi-metadata/tests/: test_mcp_server.py
mcp-clickhouse/: README.md  main.py  pyproject.toml
mcp-clickhouse/mcp_clickhouse_privileged/: __init__.py  main.py  mcp_env.py  mcp_server.py
mcp-greenplum/: .gitignore  README.md  main.py  pyproject.toml
mcp-greenplum/mcp_greenplum/: main.py  mcp_env.py  mcp_server.py
mcp-rabbitmq/: pyproject.toml
mcp-rabbitmq/mcp_rabbitmq/: __init__.py  main.py  mcp_server.py
mcp-ssh-runtime/: README.md  main.py  pyproject.toml
mcp-ssh-runtime/mcp_ssh_runtime/: __init__.py  airflow_commands.py  flink_commands.py  main.py  mcp_env.py  mcp_server.py  policy.py  remote_commands.py  ssh_client.py
mcp-ssh-runtime/tests/: test_airflow_commands.py  test_flink_commands.py  test_policy.py  test_remote_commands.py  test_ssh_client.py
mcp_discord/: README.md  main.py  pyproject.toml
mcp_discord/mcp_discord/: mcp_server.py
