[project]
name = "mcp-bi-metadata"
version = "0.1.0"
description = "Read-only MCP server for BI OpenMetadata metadata."
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
mcp-bi-metadata = "mcp_bi_metadata.main:main"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_bi_metadata"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
