[project]
name = "mcp-greenplum"
version = "0.1.0"
description = "An MCP server for Greenplum 6."
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "python-dotenv>=1.0.1",
  "psycopg2-binary>=2.9.9",
  "cachetools>=5.5.0",
]

[project.scripts]
mcp-greenplum = "mcp_greenplum.main:main"
mcp-greenplum-privileged = "mcp_greenplum.main:main"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_greenplum"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

